--- a/.vsts-ci/azure-pipelines-ci.yml
+++ b/.vsts-ci/azure-pipelines-ci.yml
@@ -8,47 +8,24 @@ variables:
   - name: DOTNET_CLI_TELEMETRY_OPTOUT
     value: 'true'
 
-trigger:
-  batch: true
-  branches:
-    include:
-      - master
-  paths:
-    exclude:
-      - /.dependabot/*
-      - /.poshchan/*
-      - /.github/**/*
-      - /.vscode/**/*
-      - /.vsts-ci/misc-analysis.yml
-      - /tools/**/*
-      - .editorconfig
-      - .gitattributes
-      - .gitignore
-      - /docs/**/*
-      - /CHANGELOG.md
-      - /CONTRIBUTING.md
-      - /README.md
-      - /LICENSE.txt
-      - /CODE_OF_CONDUCT.md
-
 jobs:
-- job: 'PS6_Win10'
-  displayName: PowerShell 6 | Windows 10
+- job: windows2022pwsh
+  displayName: Windows 2022 PowerShell 7
   pool:
-    vmImage: 'vs2017-win2016'
+    vmImage: windows-2022
   steps:
   - template: templates/ci-general.yml
 
-- job: 'PS6_macOS'
-  displayName: PowerShell 6 | macOS
+- job: macOS11
+  displayName: macOS 11
   pool:
-    vmImage: 'macOS-10.14'
+    vmImage: macOS-11
   steps:
   - template: templates/ci-general.yml
 
-- job: 'PS6_Ubuntu'
-  displayName: PowerShell 6 | Ubuntu
+- job: ubuntu2004
+  displayName: Ubuntu 20.04
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: ubuntu-20.04
   steps:
   - template: templates/ci-general.yml
