Fixed typo in exception text. Added -verbose to launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
+    "version": "0.7.0",
     "configurations": [
         {
             "name": ".NET Core Launch (console)",
@@ -14,7 +14,7 @@
                 "-NoExit",
                 "-NoProfile",
                 "-Command",
-                "Import-Module ${workspaceFolder}/module/Microsoft.PowerShell.ConsoleGuiTools"
+                "Import-Module -verbose ${workspaceFolder}/module/Microsoft.PowerShell.ConsoleGuiTools"
             ],
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
