Tweaked build scripts

--- a/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
+++ b/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
@@ -10,12 +10,12 @@
         - Change Version= to "1.99.*-*"     
         - Uncomment the RestoreSources property group below
         -->
-        <!-- <RestoreSources>$(RestoreSources);../../../gui-cs/Terminal.Gui/Terminal.Gui/bin/Debug;https://api.nuget.org/v3/index.json</RestoreSources> -->
+        <RestoreSources>$(RestoreSources);../../../gui-cs/Terminal.Gui/Terminal.Gui/bin/Debug;https://api.nuget.org/v3/index.json</RestoreSources>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Nstack.Core" Version="1.0.7" />
-        <PackageReference Include="Terminal.Gui" Version="1.14.0" />  
+        <PackageReference Include="Terminal.Gui" Version="1.14.0-*" />  
         <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.13" />
     </ItemGroup>
 
