Removed local build setting

--- a/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
+++ b/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
@@ -7,15 +7,16 @@
     <PropertyGroup>
         <!-- To pull Terminal.Gui from a local nuget source:                        
         - Build Terminal.Gui locally in ../../gui-cs/Terminal.Gui          
-        - Change Version= to "1.99.*-*"     
+        - Change Version= to "major.minor.patch-*"     
+        - Add ';https://api.nuget.org/v3/index.json' to the end of the RestoreSources property group below
         - Uncomment the RestoreSources property group below
         -->
-        <RestoreSources>$(RestoreSources);../../../gui-cs/Terminal.Gui/Terminal.Gui/bin/Debug;https://api.nuget.org/v3/index.json</RestoreSources>
+        <RestoreSources>$(RestoreSources);../../../gui-cs/Terminal.Gui/Terminal.Gui/bin/Debug</RestoreSources>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Nstack.Core" Version="1.0.7" />
-        <PackageReference Include="Terminal.Gui" Version="1.14.0-*" />  
+        <PackageReference Include="Terminal.Gui" Version="1.14.*" />  
         <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.13" />
     </ItemGroup>
 
