--- a/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
+++ b/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
@@ -1,7 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <Import Project="..\..\GraphicalTools.Common.props" />
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <!-- To pull Terminal.Gui from a local nuget source:                        
+        - Build Terminal.Gui locally in ../../gui-cs/Terminal.Gui          
+        - Change Terminal.Gui Version= to "major.minor.patch-*"     
+        - Add ';https://api.nuget.org/v3/index.json' to the end of the RestoreSources property group below
+        - Uncomment the RestoreSources property group below
+        -->
+        <!-- <RestoreSources>$(RestoreSources);../../../gui-cs/Terminal.Gui/Terminal.Gui/bin/Debug</RestoreSources> -->
     </PropertyGroup>
 
     <ItemGroup>
