Adding OneBranch pipeline YAML config file for GraphicalTools-Official

--- a/NuGet.config
+++ b/NuGet.config
@@ -1,10 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <packageSources>
-        <clear />
-        <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    </packageSources>
-    <disabledPackageSources>
-        <clear />
-    </disabledPackageSources>
+  <packageSources>
+    <clear />
+    <add key="PowerShellCore_PublicPackages" value="https://pkgs.dev.azure.com/mscodehub/PowerShellCore/_packaging/PowerShellCore_PublicPackages/nuget/v3/index.json" />
+  </packageSources>
 </configuration>
