--- a/ConsoleGuiTools.Common.props
+++ b/ConsoleGuiTools.Common.props
@@ -1,5 +1,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
+        <VersionPrefix>0.7.6</VersionPrefix>
+        <VersionSuffix></VersionSuffix>
         <Company>Microsoft</Company>
         <Copyright>© Microsoft Corporation.</Copyright>
         <LangVersion>latest</LangVersion>
