Fix NuGet publish step

--- a/.pipelines/ConsoleGuiTools-Official.yml
+++ b/.pipelines/ConsoleGuiTools-Official.yml
@@ -161,4 +161,5 @@ extends:
           inputs:
             command: push
             packagesToPush: $(drop)/Microsoft.PowerShell.ConsoleGuiTools.$(version).nupkg
+            nuGetFeedType: external
             publishFeedCredentials: PowerShellGallery
