--- a/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
+++ b/src/Microsoft.PowerShell.ConsoleGuiTools/Microsoft.PowerShell.ConsoleGuiTools.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <Import Project="..\..\ConsoleGuiTools.Common.props" />
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -11,6 +11,7 @@
         - Add ';https://api.nuget.org/v3/index.json' to the end of the RestoreSources property group below
         - Uncomment the RestoreSources property group below
         -->
+        <!-- <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies> -->
         <!-- <RestoreSources>$(RestoreSources);../../../gui-cs/Terminal.Gui/Terminal.Gui/bin/Debug</RestoreSources> -->
     </PropertyGroup>
 
@@ -18,10 +19,6 @@
         <PackageReference Include="Nstack.Core" Version="1.1.1" />
         <PackageReference Include="Terminal.Gui" Version="1.17.1" />
         <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.23" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include ="../Microsoft.PowerShell.OutGridView.Models/Microsoft.PowerShell.OutGridView.Models.csproj" />
     </ItemGroup>
 
     <ItemGroup>
