Allow release stage only on manual build

--- a/.pipelines/ConsoleGuiTools-Official.yml
+++ b/.pipelines/ConsoleGuiTools-Official.yml
@@ -8,7 +8,8 @@
 # Support:        https://aka.ms/onebranchsup                                   #
 #################################################################################
 
-trigger: none
+trigger:
+- main
 
 schedules:
 - cron: '50 19 * * 3'
@@ -119,7 +120,7 @@ extends:
               files_to_sign: "*.nupkg"
     - stage: release
       dependsOn: build
-      condition: ne(variables['Build.Reason'], 'Schedule')
+      condition: eq(variables['Build.Reason'], 'Manual')
       variables:
         version: $[ stageDependencies.build.main.outputs['package.version'] ]
         drop: $(Pipeline.Workspace)/drop_build_main
