--- a/.pipelines/ConsoleGuiTools-Official.yml
+++ b/.pipelines/ConsoleGuiTools-Official.yml
@@ -77,10 +77,7 @@ extends:
             inputs:
               packageType: sdk
               useGlobalJson: true
-          - pwsh: |
-              Register-PSRepository -Name CFS -SourceLocation "https://pkgs.dev.azure.com/powershell/PowerShell/_packaging/powershell/nuget/v2" -InstallationPolicy Trusted
-              Install-Module -Repository CFS -Name Microsoft.PowerShell.PSResourceGet
-              ./tools/installPSResources.ps1 -PSRepository CFS
+          - pwsh: ./tools/installPSResources.ps1 -PSRepository CFS
             displayName: Install PSResources
           - pwsh: Invoke-Build -Configuration $(BuildConfiguration)
             displayName: Build
